--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
   <div class="apps">
    <a href="POSV3/index.html"> POS VENTA V3 </a>
   </div>
-  
-  <footer>
+  <div class="apps">
+   <a href="MANTCATA/asignacion_departamentos.html"> CATALOGO DE DEPTO E IMPUESTOS </a>
+  </div>  <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
 </body>
