--- a/MANTCATA/asignacion_departamentos.html
+++ b/MANTCATA/asignacion_departamentos.html
@@ -87,8 +87,14 @@ button:hover {
 <script>
 /* 🔐 TU CONFIG FIREBASE */
 const firebaseConfig = {
-  // TU CONFIG AQUÍ
+  apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+  authDomain: "inventariopv-643f1.firebaseapp.com",
+  projectId: "inventariopv-643f1",
+  storageBucket: "inventariopv-643f1.firebasestorage.app",
+  messagingSenderId: "96242533231",
+  appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
 };
+
 
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
