--- a/POSVTA4/ticketsresumen.html
+++ b/POSVTA4/ticketsresumen.html
@@ -229,7 +229,13 @@ async function reimprimir(id){
   });
 
   t+="------------------------------\n";
-  t+=`TOTAL: ${(v.total||0).toFixed(2)}\n`;
+  const totalTicket =
+  Number(v.resumen_financiero?.total) ||
+  Number(v.detalle?.reduce((s,it)=>s+(Number(it.importe)||0),0)) ||
+  0;
+
+t+=`TOTAL: ${totalTicket.toFixed(2)}\n`;
+
   t+="*** REIMPRESIÓN ***\n";
 
   if(/Android/i.test(navigator.userAgent)){
